crates/lang/tests/ui/contract/fail/module-missing-constructor.stderr
error: missing ink! constructor
 --> tests/ui/contract/fail/module-missing-constructor.rs:4:1
  |
4 | mod contract {
  | ^^^
